feat: integrate demo app
* demo-repo/restructure: (31 commits)
  refactor: restructure into demo folder
  chore: update to llm-chain 0.22 (#27)
  refactor: more error handling in vidoe example
  chore: symfony 7.3 update
  fix: pin chroma db version and clean up (#26)
  feat: add demo of GPT vision capabilities based on video stream (#22)
  chore: dependecy update (#23)
  feat: extend wikipedia system prompt by tools (#21)
  chore: update to lib v0.19 (#20)
  refactor: optimize audio chat ui (#19)
  feat: audio example (#18)
  chore: updating dependencies (#17)
  chore: composer update incl twig cve patch (#16)
  chore: llm chain update with system_prompt support (#15)
  chore: install bundle 0.12 (#14)
  chore: update to llm-chain 0.11.0 (#13)
  chore: library update (#12)
  refactor: follow up on example structure to have them cleaner and more separated (#11)
  fix: typed animation only on xhr responses (#10)
  refactor: moving classes to a more component like structure (#9)
  ...

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,18 @@
 {
-    "name": "php-llm/symfony-demo",
+    "name": "symfony-ai/demo",
     "type": "project",
-    "description": "Symfony Demo Chat Application",
+    "description": "Symfony AI Demo Application",
     "license": "MIT",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "codewithkyrian/chromadb-php": "^0.4.0",
         "league/commonmark": "^2.7",
-        "php-llm/llm-chain-bundle": "^0.22",
         "runtime/frankenphp-symfony": "^0.2.0",
+        "symfony/ai-bundle": "@dev",
         "symfony/asset": "7.3.*",
         "symfony/asset-mapper": "7.3.*",
         "symfony/clock": "7.3.*",
@@ -101,13 +103,19 @@
         },
         "pipeline": [
             "composer validate --strict",
-          "php -l src/**/*.php tests/**/*.php",
-          "bin/console lint:twig templates",
-          "bin/console lint:yaml config",
-          "bin/console lint:container",
+            "php -l src/**/*.php tests/**/*.php",
+            "bin/console lint:twig templates",
+            "bin/console lint:yaml config",
+            "bin/console lint:container",
             "PHP_CS_FIXER_IGNORE_ENV=1 vendor/bin/php-cs-fixer fix",
             "phpstan analyse",
             "XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-html=coverage"
         ]
-    }
+    },
+    "repositories": [
+        { "type": "path", "url": "../src/agent" },
+        { "type": "path", "url": "../src/ai-bundle" },
+        { "type": "path", "url": "../src/platform" },
+        { "type": "path", "url": "../src/store" }
+    ]
 }
