--- a/config/packages/ai.yaml
+++ b/config/packages/ai.yaml
@@ -1,15 +1,15 @@
-llm_chain:
+ai:
     platform:
         openai:
             api_key: '%env(OPENAI_API_KEY)%'
-    chain:
+    agent:
         blog:
-            # platform: 'llm_chain.platform.anthropic'
+            # platform: 'symfony_ai.platform.anthropic'
             model:
                 name: 'GPT'
                 version: 'gpt-4o-mini'
             tools:
-                - 'PhpLlm\LlmChain\Chain\Toolbox\Tool\SimilaritySearch'
+                - 'Symfony\AI\Agent\Toolbox\Tool\SimilaritySearch'
                 - service: 'clock'
                   name: 'clock'
                   description: 'Provides the current date and time.'
@@ -28,23 +28,23 @@ llm_chain:
             system_prompt: 'Please answer the users question based on Wikipedia and provide a link to the article.'
             include_tools: true
             tools:
-                - 'PhpLlm\LlmChain\Chain\Toolbox\Tool\Wikipedia'
+                - 'Symfony\AI\Agent\Toolbox\Tool\Wikipedia'
         audio:
             model:
                 name: 'GPT'
                 version: 'gpt-4o-mini'
             system_prompt: 'You are a friendly chatbot that likes to have a conversation with users and asks them some questions.'
             tools:
-                # Chain in chain 🤯
-                - service: 'llm_chain.chain.blog'
+                # Agent in agent 🤯
+                - service: 'symfony_ai.agent.blog'
                   name: 'symfony_blog'
                   description: 'Can answer questions based on the Symfony blog.'
-                  is_chain: true
+                  is_agent: true
     store:
         chroma_db:
             symfonycon:
                 collection: 'symfony_blog'
-    embedder:
+    indexer:
         default:
             model:
                 name: 'Embeddings'
@@ -55,11 +55,11 @@ services:
         autowire: true
         autoconfigure: true
 
-    # PhpLlm\LlmChain\Chain\Toolbox\Tool\Clock: ~
-    # PhpLlm\LlmChain\Chain\Toolbox\Tool\OpenMeteo: ~
-    # PhpLlm\LlmChain\Chain\Toolbox\Tool\SerpApi:
+    # Symfony\AI\Agent\Toolbox\Tool\Clock: ~
+    # Symfony\AI\Agent\Toolbox\Tool\OpenMeteo: ~
+    # Symfony\AI\Agent\Toolbox\Tool\SerpApi:
     #     $apiKey: '%env(SERP_API_KEY)%'
-    PhpLlm\LlmChain\Chain\Toolbox\Tool\Wikipedia: ~
-    PhpLlm\LlmChain\Chain\Toolbox\Tool\SimilaritySearch:
-        $model: '@llm_chain.embedder.default.model'
+    Symfony\AI\Agent\Toolbox\Tool\Wikipedia: ~
+    Symfony\AI\Agent\Toolbox\Tool\SimilaritySearch:
+        $model: '@symfony_ai.indexer.default.model'
 
