--- a/config/packages/ai.yaml
+++ b/config/packages/ai.yaml
@@ -14,6 +14,16 @@ ai:
                   name: 'clock'
                   description: 'Provides the current date and time.'
                   method: 'now'
+        stream:
+            model:
+                class: 'Symfony\AI\Platform\Bridge\OpenAI\GPT'
+                name: !php/const Symfony\AI\Platform\Bridge\OpenAI\GPT::GPT_4O_MINI
+            system_prompt: |
+                You are an example chat application where messages from the LLM are streamed to the user using
+                Server-Sent Events via `symfony/ux-turbo` / Turbo Streams. This example does not use any custom
+                javascript and solely relies on the built-in `live` & `turbo_stream` Stimulus controllers.
+                Whatever the user asks, tell them about the application & used technologies.
+            tools: false
         youtube:
             model:
                 class: 'Symfony\AI\Platform\Bridge\OpenAI\GPT'
@@ -62,4 +72,3 @@ services:
     Symfony\AI\Agent\Toolbox\Tool\Wikipedia: ~
     Symfony\AI\Agent\Toolbox\Tool\SimilaritySearch:
         $model: '@ai.indexer.default.model'
-
