--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,3 +18,11 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+
+    Symfony\AI\McpSdk\Capability\Tool\ToolExecutorInterface:
+        class: Symfony\AI\McpSdk\Capability\ToolChain
+        arguments:
+            - ['@App\MCP\Tools\CurrentTimeTool']
+
+    Symfony\AI\McpSdk\Capability\Tool\CollectionInterface:
+        alias: Symfony\AI\McpSdk\Capability\Tool\ToolExecutorInterface
