Switch to Symfony CLI for demo

--- a/.env
+++ b/.env
@@ -20,4 +20,5 @@ APP_SECRET=ccb9dca72dce53c683eaaf775bfdb253
 ###< symfony/framework-bundle ###
 
 CHROMADB_HOST=chromadb
+CHROMADB_PORT=8080
 OPENAI_API_KEY=sk-...
