--- a/config/packages/chromadb.yaml
+++ b/config/packages/chromadb.yaml
@@ -2,6 +2,7 @@ services:
     Codewithkyrian\ChromaDB\Factory:
         calls:
             - withHost: ['%env(CHROMADB_HOST)%']
+            - withPort: ['%env(CHROMADB_PORT)%']
 
     Codewithkyrian\ChromaDB\Client:
         factory: ['@Codewithkyrian\ChromaDB\Factory', 'connect']
