[AI Bundle][Store] Add `FilterInterface` and filters support to `Indexer`

--- a/config/packages/ai.yaml
+++ b/config/packages/ai.yaml
@@ -62,6 +62,8 @@ ai:
         blog:
             loader: 'Symfony\AI\Store\Document\Loader\RssFeedLoader'
             source: 'https://feeds.feedburner.com/symfony/blog'
+            filters:
+                - 'app.filter.week_of_symfony'
             transformers:
                 - 'Symfony\AI\Store\Document\Transformer\TextTrimTransformer'
             vectorizer: 'ai.vectorizer.openai'
@@ -83,3 +85,9 @@ services:
 
     Symfony\AI\Store\Document\Loader\RssFeedLoader: ~
     Symfony\AI\Store\Document\Transformer\TextTrimTransformer: ~
+    
+    app.filter.week_of_symfony:
+        class: 'Symfony\AI\Store\Document\Filter\TextContainsFilter'
+        arguments:
+            $needle: 'Week of Symfony'
+            $caseSensitive: false
