Migrate MCP Bundle from symfony/mcp-sdk to official mcp/sdk
- Replace symfony/mcp-sdk dependency with official mcp/sdk
- Refactor Server creation to use Server::make() builder pattern
- Convert tool definitions from interfaces to #[McpTool] attributes
- Implement automatic tool discovery in src/ directory
- Update STDIO transport command to mcp:server
- Simplify service configuration using native SDK patterns
- Remove redundant ServerFactory and routes.php files
- Add custom LogicException for bundle-specific errors
- Update all documentation (README, CHANGELOG, index.rst)
- Fix composer.json description
- Add .idea/ to .gitignore

Resolves #526

Fabbot + php-cs-fixer

DOCtor-RST

 Fix RouteLoader registration to always create when transports enabled

Remove .idea

  - Add autoconfiguration for #[McpTool] attribute with mcp.tool tag
  - Create McpToolPass compiler pass using ServiceLocatorTagPass::register()
  - Inject Service Locator into ServerBuilder via setContainer()

Fix PR review comments for MCP Bundle migration

- Remove prefer-stable from root composer.json
- Move CHANGELOG content to 0.1 section and remove BC BREAK labels
- Use ServerBuilder::class and Server::class in services configuration
- Fix "client vs server" comment in documentation
- Use ServerBuilder::class in test instead of string

Remove symfony/mcp-sdk

Remove symfony/mcp-sdk ref in claude reamdde et phpstan

Rewrite CHANGELOG.md

Use [] === $taggedServices instead of empty($taggedServices)

Use use Symfony\Component\Routing\Exception\LogicException; instead of custom Exception

Add MCP capabilities support to Symfony bundle

This commit implements Model Context Protocol (MCP) support by adding:

- Prompts: System instructions for AI context using #[McpPrompt]
- Resources: Static data access using #[McpResource]
- Resource Templates: Dynamic resources with parameters using #[McpResourceTemplate]

Implementation includes:
- Auto-configuration for MCP attributes with proper tagging
- Compiler 

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/flex": "^2.5",
         "symfony/framework-bundle": "~7.3.0",
         "symfony/http-client": "~7.3.0",
+        "mcp/sdk": "@dev",
         "symfony/mcp-bundle": "@dev",
         "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "~7.3.0",
