Add support for query parameters in model configuration
- Enable two model configuration formats:
  1. Query parameter style: model.name with ?key=value parameters
  2. Separate options style: model.name and model.options array
- Add validation to prevent using both formats simultaneously
- Use parse_url() for parsing query parameters
- Query parameter values remain as strings (no type conversion)
- Update demo configuration and documentation
- Add comprehensive test coverage for both formats

--- a/config/packages/ai.yaml
+++ b/config/packages/ai.yaml
@@ -42,7 +42,7 @@ ai:
         audio:
             model:
                 class: 'Symfony\AI\Platform\Bridge\OpenAi\Gpt'
-                name: !php/const Symfony\AI\Platform\Bridge\OpenAi\Gpt::GPT_4O_MINI
+                name: 'gpt-4o-mini?temperature=1.0'
             prompt: 'You are a friendly chatbot that likes to have a conversation with users and asks them some questions.'
             tools:
                 # Agent in agent 🤯
