Add smart cropping example to demo

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-gd": "*",
         "codewithkyrian/chromadb-php": "^0.4.0",
         "league/commonmark": "^2.7",
         "mcp/sdk": "@dev",
@@ -22,13 +23,16 @@
         "symfony/dom-crawler": "~7.3.0",
         "symfony/dotenv": "~7.3.0",
         "symfony/flex": "^2.5",
+        "symfony/form": "~7.3.0",
         "symfony/framework-bundle": "~7.3.0",
         "symfony/http-client": "~7.3.0",
         "symfony/mcp-bundle": "@dev",
+        "symfony/mime": "~7.3.0",
         "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "~7.3.0",
         "symfony/twig-bundle": "~7.3.0",
         "symfony/uid": "~7.3.0",
+        "symfony/ux-dropzone": "^2.31",
         "symfony/ux-icons": "^2.25",
         "symfony/ux-live-component": "^2.25",
         "symfony/ux-turbo": "^2.25",
