--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -24,6 +24,13 @@ crop:
     defaults:
         template:  'crop.html.twig'
 
+recipe:
+    path: '/recipe'
+    controller: 'Symfony\Bundle\FrameworkBundle\Controller\TemplateController'
+    defaults:
+        template:  'chat.html.twig'
+        context: { chat: 'recipe' }
+
 stream:
     path: '/stream'
     controller: 'Symfony\Bundle\FrameworkBundle\Controller\TemplateController'
