[Agent][OpenMeteo] Add `symfony/ai-openmeteo-tool`

--- a/config/packages/ai.yaml
+++ b/config/packages/ai.yaml
@@ -106,7 +106,7 @@ services:
         autoconfigure: true
 
     # Symfony\AI\Agent\Toolbox\Tool\Clock: ~
-    # Symfony\AI\Agent\Toolbox\Tool\OpenMeteo: ~
+    # Symfony\AI\Agent\Bridge\OpenMeteo\OpenMeteo: ~
     # Symfony\AI\Agent\Toolbox\Tool\SerpApi:
     #     $apiKey: '%env(SERP_API_KEY)%'
     Symfony\AI\Agent\Toolbox\Tool\Wikipedia: ~
