--- a/.env
+++ b/.env
@@ -21,5 +21,8 @@ APP_SECRET=ccb9dca72dce53c683eaaf775bfdb253
 
 CHROMADB_HOST=chromadb
 CHROMADB_PORT=8080
-OPENAI_API_KEY=sk-...
 HUGGINGFACE_API_KEY=hf-...
+
+###> symfony/ai-bundle ###
+OPENAI_API_KEY=sk-...
+###< symfony/ai-bundle ###
